# hyprparser

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: integration.rs  test_config_1.conf
